--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "28-Stu_Mini-Project",
+  "name": "student-statistics-back-end",
   "version": "1.0.1",
   "description": "Mongoose back-end project - Develop",
   "main": "index.js",
